# Decision-Intelligence-Assistant

./: .env.example  .gitignore  docker-compose.yml
backend/: Dockerfile  README.md  config.py  main.py  pyproject.toml
backend/answering_llm/: llm_client.py
backend/artifacts/: final_urgency_model.pkl  tfidf_model_vectorizer.pkl  tfidf_urgency_model.pkl
backend/data/: howto_tickets.csv
backend/ml/: engineered_feat_model.py  preprocess.py  tf_idf_model.py
backend/prompts/: context_only_support_prompt.txt  grounded_answer.py  plain_answer.py
backend/rag/: embed_query.py  ingesting_script.py  llm_client.py  search_db.py
backend/routers/: ml_router.py  qdrant_db.py  rag_router.py
backend/schemas/: ml_schemas.py  rag_schemas.py
backend/services/: external_model_client.py  llm_client.py  llm_grounding.py
frontend/: README.md  index.html  package-lock.json  package.json
frontent/: README.md  main.py  package-lock.json  package.json  pyproject.toml
frontent/src/: App.jsx  styles.css
notebooks/: eng_feat_mdl.ipynb  tf_idf.ipynb
