[project]
name = "backend"
version = "0.1.0"
description = "Lean backend for RAG vs no-RAG and ML inference comparison"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"fastapi>=0.115.0",
	"uvicorn[standard]>=0.30.0",
	"qdrant-client>=1.10.0",
	"openai>=1.40.0",
	"requests>=2.32.0",
	"pandas>=2.2.0",
	"pydantic-settings>=2.4.0",
	"python-dotenv>=1.0.1",
	"vaderSentiment>=3.3.2",
]

[project.scripts]
start = "main:run"
